// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostAttachmentOpenGraph should match snapshot, without image and description 1`] = `null`;

exports[`PostAttachmentOpenGraph should match snapshot, without image and description 2`] = `
<View
  style={
    Object {
      "borderColor": "rgba(61,60,64,0.2)",
      "borderRadius": 3,
      "borderWidth": 1,
      "flex": 1,
      "marginTop": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "rgba(61,60,64,0.5)",
          "fontSize": 12,
          "marginBottom": 10,
        }
      }
    >
      Mattermost
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <TouchableWithFeedbackIOS
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      type="opacity"
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={3}
        style={
          Array [
            Object {
              "color": "#2389d7",
              "fontSize": 14,
              "marginBottom": 10,
            },
            Object {
              "marginRight": 0,
            },
          ]
        }
      >
        Title
      </Text>
    </TouchableWithFeedbackIOS>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "rgba(61,60,64,0.2)",
          "borderRadius": 3,
          "borderWidth": 1,
          "marginTop": 5,
        },
        Object {
          "height": 69.83261802575107,
          "width": 307,
        },
      ]
    }
  >
    <TouchableWithFeedbackIOS
      onPress={[Function]}
      type="none"
    >
      <Image
        resizeMode="contain"
        style={
          Array [
            Object {
              "borderRadius": 3,
            },
            Object {
              "height": 69.83261802575107,
              "width": 307,
            },
          ]
        }
      />
    </TouchableWithFeedbackIOS>
  </View>
</View>
`;

exports[`PostAttachmentOpenGraph should match snapshot, without site_name 1`] = `
<View
  style={
    Object {
      "borderColor": "rgba(61,60,64,0.2)",
      "borderRadius": 3,
      "borderWidth": 1,
      "flex": 1,
      "marginTop": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <TouchableWithFeedbackIOS
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      type="opacity"
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={3}
        style={
          Array [
            Object {
              "color": "#2389d7",
              "fontSize": 14,
              "marginBottom": 10,
            },
            Object {
              "marginRight": 0,
            },
          ]
        }
      >
        Title
      </Text>
    </TouchableWithFeedbackIOS>
  </View>
</View>
`;

exports[`PostAttachmentOpenGraph should match snapshot, without title and url 1`] = `
<View
  style={
    Object {
      "borderColor": "rgba(61,60,64,0.2)",
      "borderRadius": 3,
      "borderWidth": 1,
      "flex": 1,
      "marginTop": 10,
      "padding": 10,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <TouchableWithFeedbackIOS
      onPress={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
      type="opacity"
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={3}
        style={
          Array [
            Object {
              "color": "#2389d7",
              "fontSize": 14,
              "marginBottom": 10,
            },
            Object {
              "marginRight": 0,
            },
          ]
        }
      >
        https://mattermost.com/
      </Text>
    </TouchableWithFeedbackIOS>
  </View>
</View>
`;

exports[`PostAttachmentOpenGraph should match state and snapshot, on renderDescription 1`] = `null`;

exports[`PostAttachmentOpenGraph should match state and snapshot, on renderDescription 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={5}
    style={
      Object {
        "color": "rgba(61,60,64,0.7)",
        "fontSize": 13,
        "marginBottom": 10,
      }
    }
  >
    Description
  </Text>
</View>
`;

exports[`PostAttachmentOpenGraph should match state and snapshot, on renderImage 1`] = `null`;

exports[`PostAttachmentOpenGraph should match state and snapshot, on renderImage 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "rgba(61,60,64,0.2)",
        "borderRadius": 3,
        "borderWidth": 1,
        "marginTop": 5,
      },
      Object {
        "height": 69.83261802575107,
        "width": 307,
      },
    ]
  }
>
  <TouchableWithFeedbackIOS
    onPress={[Function]}
    type="none"
  >
    <Image
      resizeMode="contain"
      style={
        Array [
          Object {
            "borderRadius": 3,
          },
          Object {
            "height": 69.83261802575107,
            "width": 307,
          },
        ]
      }
    />
  </TouchableWithFeedbackIOS>
</View>
`;
